Changes
=======

1.1.3 (TBD)
-----------

Bug fixes:

- dataset_mask returned in some cases an array with dtype "int64" (#1856). This
  bug was introduced in 1.1.2 and has been fixed.

1.1.2 (2019-12-18)
------------------

Bug fixes:

- Sampling of WarpedVRT datasets was broken in version in 1.1.1 (#1833) and has
  been fixed.
- The missing out_dtype keyword argument has been added to
  WarpedVRTReaderBase.read() (#1849).
- The missing --format option has been added to rio-calc (#1846).
- Reduce all the band masks when computing the dataset mask. Previously we had
  missed the last band.
- PR #1842 makes sure that rio-calc's cleanup doesn't fail due to unbound
  variables.
- The conflict between the --bbox/--feature/--collection and
  --sequence/--collection option of rio-bounds (#1807) has been fixed by
  removing "collection" from the possible JSON type options.
- Increase default precision for the merge tool from 7 to 10 (#1837).
- Allow rio-clip and rio-convert to overwrite output files (#1836).
- Allow src_crs parameter to fully override the source dataset's CRS (#1808).

Packaging notes:

- The wheels on PyPI now include the base (version 1.8) PROJ datum grids and
  are thus a few MB larger in size.

1.1.1 (2019-11-13)
------------------

Bug fixes:

- Calling a dataset's sample method with coordinates outside the extent of a
  dataset with a nodata value of None has raised a TypeError (#1822). Now, it
  gives the values we would get from a boundless read of the dataset's values.
- Use new set_proj_search_path() function to set the PROJ data search path. For
  GDAL versions before 3.0 this sets the PROJ_LIB environment variable. For
  GDAL version 3.0 this calls OSRSetPROJSearchPaths(), which overrides
  PROJ_LIB (#1823).
- Check for header.dxf file instead of pcs.csv when looking for installed GDAL
  data. The latter is gone with GDAL 3.0 but the former remains (#1823).
- RGB rasters are now properly displayed by rasterio.plot.show (#1650).

Notes:
