@@ -6,6 +6,10 @@ Changes
 
 Bug fixes:
 
+- The required transform argument of windows.from_bounds() was changed from a
+  positional arg to a keyword arg in commit 361112e but no guard against the
+  default value of None was added (#1857). The function now raises WindowError
+  if no transform is given.
 - dataset_mask returned in some cases an array with dtype "int64" (#1856). This
   bug was introduced in 1.1.2 and has been fixed.
 
